--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
 </head>
 <body>
     <h1>Работа с гит</h1>
-    
-</body>
+    <p>Инициализация</p>
+    <pre>git init</pre>
+
+    <p>Добавляем изменения локально</p>
+    <pre> git add .</pre>
+    <p>Добавляем коммит</p>
+    <pre> git commit -m "test 2 commit"</pre>
+    <p>Пушим</p>
+    <pre>git push -u origin  master</pre>
+    <p>Пушим на гитхаб</p>
+    <pre>git remote add 
+        origin  https://github.com/genetik15/git_test.git</pre>
+        <p>Смотрим конфиг</p>
+        <pre>git config --list</pre>
+        <p>Добавляем мэил и логин</p>
+        <pre> git config --global user.email test@gmail.com
+            git config --global user.name test
+        </pre>
+    </body>
 </html>
