--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     <p>Пушим</p>
     <pre>git push -u origin  master</pre>
     <p>Пушим на гитхаб</p>
-    <pre>git remote add 
-        origin  https://github.com/genetik15/git_test.git</pre>
-        <p>Смотрим конфиг</p>
-        <pre>git config --list</pre>
-        <p>Добавляем мэил и логин</p>
-        <pre> git config --global user.email test@gmail.com
-            git config --global user.name test
-        </pre>
+    <pre>git remote add origin  https://github.com/genetik15/git_test.git</pre>
+    <p>Смотрим конфиг</p>
+    <pre>git config --list</pre>
+    <p>Добавляем мэил и логин</p>
+    <pre>
+        git config --global user.email test@gmail.com
+        git config --global user.name test
+    </pre>
+    <p>Скачать с гитхаба</p>
+    <pre>git clone https://github.com/morphIsmail/webforte.git</pre>
+    <p>Хороший плагин для просмотра истории - git history diff</p>
     </body>
 </html>
