4-ый коммит - с вижуал Кода

--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <p>Скачать с гитхаба</p>
     <pre>git clone https://github.com/morphIsmail/webforte.git</pre>
     <p>Хороший плагин для просмотра истории - git history diff</p>
+    <p>Перезагрузить изменения с гита</p>
+    <pre>git pull</pre>
     </body>
 </html>
